--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,9 @@
+<app-navbar class="app-navbar"></app-navbar>
+
 <router-outlet />
 <!-- <app-loading-indicator /> -->
+
+<app-footer></app-footer>
 
 <div class='toggle-switch' >
     <label>
