--- a/frontend/src/app/shared/component/column-chart/column-chart.component.html
+++ b/frontend/src/app/shared/component/column-chart/column-chart.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-    <ng-container *ngIf="dataTable.length > 1">
+    <!-- <div>*ngIf="dataTable.length > 1"</div> -->
+    <ng-container >
         <google-chart [data]="lineChart"></google-chart>
     </ng-container>
     <ng-container *ngIf="dataTable.length === 1">
