feat: stock page -> done

--- a/frontend/src/app/features/components/stock-page/stock-page.component.scss
+++ b/frontend/src/app/features/components/stock-page/stock-page.component.scss
@@ -49,3 +49,20 @@
     visibility: visible;
     opacity: 1;
   }
+
+  .indicator-title{
+    padding-top: 2rem;
+  }
+
+  .a{
+    width: 35%;
+  }
+
+  .b{
+    width: 5%;
+  }
+
+  .c{
+    width: 60%;
+    // text-align: right;
+  }
