--- a/frontend/src/app/shared/component/pie-chart/pie-chart.component.html
+++ b/frontend/src/app/shared/component/pie-chart/pie-chart.component.html
@@ -1,13 +1,13 @@
 <div class="container">
-    <ng-container >
+    <ng-container *ngIf="dataTable.length > 1" >
         <google-chart [data]="pieChart"></google-chart>
     </ng-container>
-    <!-- <ng-container *ngIf="dataTable.length === 1">
+    <ng-container *ngIf="dataTable.length === 1">
         <div class="notification notification-not-found is-light is-size-7">
-            <h3 class="is-size-6 set">{{ pieChart.options.title }}</h3><br>
-            <h1 class="is-size-4 set">NOT FOUND</h1>
+            <h3 class="is-size-6 set has-text-black-bis">{{ pieChart.options.title }}</h3><br>
+            <h1 class="is-size-4 set has-text-black-bis">NOT FOUND</h1>
           </div>
-    </ng-container> -->
+    </ng-container>
     <!-- <div class="container">
         <ng-container >
            <google-charts-dashboard [data]="dashboardPieChart" ></google-charts-dashboard>
