--- a/frontend/src/app/shared/component/column-chart/column-chart.component.html
+++ b/frontend/src/app/shared/component/column-chart/column-chart.component.html
@@ -1,11 +1,11 @@
 <div class="container">
   <!-- <div>*ngIf="dataTable.length > 1"</div> -->
   <ng-container *ngIf="dataTable.length > 1">
-    <google-chart [data]="lineChart"></google-chart>
+    <google-chart [data]="columnChart"></google-chart>
   </ng-container>
   <ng-container *ngIf="dataTable.length === 1">
     <div class="notification notification-not-found is-light is-size-7">
-      <h3 class="is-size-6 set has-text-black-bis">{{ lineChart.options.title }}</h3>
+      <h3 class="is-size-6 set has-text-black-bis">{{ columnChart.options.title }}</h3>
       <br />
       <h1 class="is-size-4 set has-text-black-bis">NOT FOUND</h1>
     </div>
