--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -179,6 +179,11 @@ hr.new1 {
   padding-left: 1rem;
 }
 
+.right-border{
+  border-right: 2px solid var(--monkey-primary-01);
+  padding-right: 1rem;
+}
+
 // .top-border{
 //   border-top: 1px solid var(--monkey-primary-01);
 //   padding-left: 1rem;
