--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,6 @@
-<app-navbar class="app-navbar"></app-navbar>
+<!-- <app-navbar class="app-navbar"></app-navbar>
 
 <router-outlet />
-<!-- <app-loading-indicator /> -->
 
 <app-footer></app-footer>
 
@@ -10,4 +9,23 @@
         <input placeholder="theme"  type='checkbox' [(ngModel)]="isLight" (click)="themeToggleMode()" ngDefaultControl  >
         <span class = 'slider'></span>
     </label>
-</div>
+</div> -->
+
+<div class="app-container">
+    <app-navbar class="app-navbar"></app-navbar>
+  
+    <main>
+      <router-outlet></router-outlet>
+      <!-- <app-loading-indicator /> -->
+    </main>
+  
+    <app-footer></app-footer>
+  
+    <div class="toggle-switch">
+      <label>
+        <input placeholder="theme" type="checkbox" [(ngModel)]="isLight" (click)="themeToggleMode()" ngDefaultControl>
+        <span class="slider"></span>
+      </label>
+    </div>
+  </div>
+  
