--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -51,4 +51,22 @@
     background-color: var(--dark);
     box-shadow: none;
   }
+
+  html, body {
+    height: 100%;
+    margin: 0;
+  }
+  
+  .app-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* Full viewport height */
+  }
+  
+  main {
+    flex: 1; /* Takes up the remaining space */
+  }
+  
+  
+  
   
