--- a/frontend/src/app/core/layout/navbar/navbar.component.html
+++ b/frontend/src/app/core/layout/navbar/navbar.component.html
@@ -133,19 +133,19 @@
 
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item"> Home </a>
+      <a class="navbar-item" [routerLink]="'/'"> Home </a>
 
-      <a class="navbar-item"> About Us </a>
+      <a class="navbar-item" routerLink="about-us"> About Us </a>
 
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link"> More </a>
 
         <div class="navbar-dropdown">
-          <a class="navbar-item"> About </a>
-          <a class="navbar-item is-selected"> Jobs </a>
-          <a class="navbar-item"> Contact </a>
+          <a class="navbar-item" routerLink="/"> Home </a>
+          <!-- <a class="navbar-item is-selected"> Jobs </a> -->
+          <!-- <a class="navbar-item"> Contact </a> -->
           <hr class="navbar-divider" />
-          <a class="navbar-item"> Report an issue </a>
+          <a class="navbar-item" routerLink="/"> There is nothing more here sir, go back 'Home' </a>
         </div>
       </div>
     </div>
@@ -153,10 +153,10 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a class="button is-primary">
+          <a class="button is-primary" [routerLink]="'auth/register'">
             <strong>Sign up</strong>
           </a>
-          <a class="button is-light"> Log in </a>
+          <a class="button is-light" [routerLink]="'auth/signin'"> Log in </a>
         </div>
       </div>
     </div>
