--- a/frontend/src/app/features/components/overview/overview.component.scss
+++ b/frontend/src/app/features/components/overview/overview.component.scss
@@ -10,3 +10,10 @@
 
 }
 
+// .no-underline{
+//     text-decoration: none;
+// }
+// .is-size-7.has-text-info {
+//     text-decoration: none;
+//   }
+
