--- a/frontend/src/app/core/layout/footer/footer.component.html
+++ b/frontend/src/app/core/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer" style="padding-bottom: 4rem;">
+<footer class="footer" >
     <div class="content has-text-centered">
       <p>
         <strong>MonkeyScreneer</strong> by <a href="https://jgthms.com">Jopi Doloksaribu</a>. &copy; 2024 All Rights Reserved.
