--- a/frontend/src/app/features/components/overview/overview.component.html
+++ b/frontend/src/app/features/components/overview/overview.component.html
@@ -22,7 +22,7 @@
               <div class="column is-half" *ngFor="let item of topDividendRate">
                 <div class="container left-border">
                   <div class="is-flex is-justify-content-space-between">
-                    <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+                    <p class="is-size-7 has-text-info " routerLinkActive="router-link-active" [routerLink]="['/stock',item.symbol]">{{ item.symbol }}</p>
                     <p class="is-size-7 has-text-warning">
                       Rp{{ item.dividendRate }}
                     </p>
@@ -44,7 +44,7 @@
               <div class="column is-half" *ngFor="let item of topDividendYield">
                 <div class="container is-loading left-border">
                   <div class="is-flex is-justify-content-space-between">
-                    <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+                    <p class="is-size-7 has-text-info" routerLinkActive="router-link-active" [routerLink]="['/stock',item.symbol]">{{ item.symbol }}</p>
                     <p class="is-size-7 has-text-warning">
                       {{ item.dividendYield | percent : "1.0-2" }}
                     </p>
@@ -71,6 +71,7 @@
                     <p
                       class="is-size-7 has-text-info"
                       style="margin-right: 1rem"
+                      routerLinkActive="router-link-active" [routerLink]="['/stock',item.symbol]"
                     >
                       {{ item.symbol }}
                     </p>
@@ -98,7 +99,7 @@
               <div class="column is-one-third" *ngFor="let item of topVolumes">
                 <div class="container left-border">
                   <div class="is-flex is-justify-content-space-between">
-                    <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+                    <p class="is-size-7 has-text-info" routerLinkActive="router-link-active" [routerLink]="['/stock',item.symbol]">{{ item.symbol }}</p>
                     <p class="is-size-7 has-text-warning">
                       {{ item.price | currency : "Rp" }}
                     </p>
@@ -122,7 +123,7 @@
               <div class="column is-one-quarter" *ngFor="let item of topROE">
                 <div class="container left-border">
                   <div class="is-flex is-justify-content-space-between">
-                    <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+                    <p class="is-size-7 has-text-info" routerLinkActive="router-link-active" [routerLink]="['/stock',item.symbol]">{{ item.symbol }}</p>
                     <p class="is-size-7 has-text-warning">
                       {{ item.returnOnEquity | number }}
                     </p>
@@ -143,7 +144,7 @@
               <div class="column is-one-quarter" *ngFor="let item of topEPS">
                 <div class="container left-border">
                   <div class="is-flex is-justify-content-space-between">
-                    <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+                    <p class="is-size-7 has-text-info" routerLinkActive="router-link-active" [routerLink]="['/stock',item.symbol]">{{ item.symbol }}</p>
                     <p class="is-size-7 has-text-warning">
                       {{ item.trailingEps | number }}
                     </p>
@@ -167,7 +168,7 @@
               >
                 <div class="container left-border">
                   <div class="is-flex is-justify-content-space-between">
-                    <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+                    <p class="is-size-7 has-text-info" routerLinkActive="router-link-active" [routerLink]="['/stock',item.symbol]">{{ item.symbol }}</p>
                     <p class="is-size-7 has-text-warning">
                       {{ item.earningsGrowth | number }}
                     </p>
@@ -194,7 +195,7 @@
             <div class="columns is-multiline">
               <div class="column is-half" *ngFor="let item of topGainers">
                 <div class="container left-border">
-                  <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+                  <p class="is-size-7 has-text-info" routerLinkActive="router-link-active" [routerLink]="['/stock',item.symbol]">{{ item.symbol }}</p>
                   <!-- <span
                   class="tag is-normal is-7"
                   [ngClass]="setColorListingBoard(item.listing_board)"
@@ -221,7 +222,7 @@
             <div class="columns is-multiline">
               <div class="column is-half" *ngFor="let item of topLosers">
                 <div class="container left-border">
-                  <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+                  <p class="is-size-7 has-text-info" routerLinkActive="router-link-active" [routerLink]="['/stock',item.symbol]">{{ item.symbol }}</p>
                   <p class="is-size-7 truncated">{{ item.companyName }}</p>
 
                   <div class="is-flex is-justify-content-space-between">
@@ -243,7 +244,7 @@
             <div class="columns is-multiline">
               <div class="column is-half" *ngFor="let item of weeklyGainers">
                 <div class="container left-border">
-                  <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+                  <p class="is-size-7 has-text-info" routerLinkActive="router-link-active" [routerLink]="['/stock',item.symbol]">{{ item.symbol }}</p>
                   <p class="is-size-7 truncated">{{ item.companyName }}</p>
 
                   <div class="is-flex is-justify-content-space-between">
@@ -262,7 +263,7 @@
             <div class="columns is-multiline">
               <div class="column is-half" *ngFor="let item of weeklyLosers">
                 <div class="container left-border">
-                  <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+                  <p class="is-size-7 has-text-info" routerLinkActive="router-link-active" [routerLink]="['/stock',item.symbol]">{{ item.symbol }}</p>
                   <p class="is-size-7 truncated">{{ item.companyName }}</p>
 
                   <div class="is-flex is-justify-content-space-between">
@@ -284,7 +285,7 @@
             <div class="columns is-multiline">
               <div class="column is-half" *ngFor="let item of monthlyGainers">
                 <div class="container left-border">
-                  <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+                  <p class="is-size-7 has-text-info" routerLinkActive="router-link-active" [routerLink]="['/stock',item.symbol]">{{ item.symbol }}</p>
                   <p class="is-size-7 truncated">{{ item.companyName }}</p>
 
                   <div class="is-flex is-justify-content-space-between">
@@ -303,7 +304,7 @@
             <div class="columns is-multiline">
               <div class="column is-half" *ngFor="let item of monthlyLosers">
                 <div class="container left-border">
-                  <p class="is-size-7 has-text-info">{{ item.symbol }}</p>
+                  <p class="is-size-7 has-text-info" routerLinkActive="router-link-active" [routerLink]="['/stock',item.symbol]">{{ item.symbol }}</p>
                   <p class="is-size-7 truncated">{{ item.companyName }}</p>
 
                   <div class="is-flex is-justify-content-space-between">
